--- a/Project1/Registration-form/style.css
+++ b/Project1/Registration-form/style.css
@@ -50,10 +50,11 @@ section{
 #text{
     width:50%;
     padding:10%;
+    margin-top:50%;
 }
 h1{
     font-size:50px;
-    font-weight:700;
+    font-weight:900;
     line-height: 1;
     color:white;
     
